# transpAIrent.energy

./: LICENSE  README.md
.iesopt/: juliapkg.json
wip/: README.md
wip/charts/: api_description.md
wp5/basic-example/: .gitignore  main.py  pyproject.toml
wp5/basic-example/opt/: config.iesopt.yaml
wp5/basic-example/opt/files/: Timeseries_47.516_16.368_SA3_1kWp_crystSi_14_20deg_0deg_2023_2023.csv  transpAIrent_heat_elec.csv
wp5/scheduler/: .gitignore  main.py  pyproject.toml
wp5/scheduler/opt/: config.iesopt.yaml  default.iesopt.param.yaml
wp5/scheduler/src/: scheduler.py  util.py
